# fastapi-clean-template

./: .gitignore  .ninja_log  .pre-commit-config.yaml  README.md  bandit.yaml  build.ninja  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
factbackend/controllers/: auth_controller.py
factbackend/dtos/requests/auth/: register_user_request.py
factbackend/entities/: user.py
factbackend/generics/: base_main_repository.py  base_main_service.py
factbackend/options/: app_options.py  db_options.py
factbackend/providers/: db_provider.py
factbackend/repositories/: user_repository.py
factbackend/routers/: auth_router.py
factbackend/services/: auth_service.py
scripts/: cleanup.sh
src/commons/decorators/: auth_decorators.py
src/commons/generics/: base_crud_entity.py  base_crud_service.py  base_entity_repository.py  base_main_repository.py
src/commons/options/: security_options.py
src/commons/providers/: auth_provider.py  db_provider.py  hash_proider.py  hash_provider.py  jwt_provider.py  openapi_provider.py
src/commons/templates/: base_dtos.py  success_response.py
src/commons/templates/responses/: failure_response.py
src/dtos/requests/auth/: authenticate_request_dto.py  create_role_dto.py  register_user_request.py  (+1 more)
src/entities/: user.py
src/generics/: base_main_repository.py  base_main_service.py
src/middlewares/: bearer_auth_middleware.py
src/options/: app_options.py  jwt_options.py
src/providers/: db_provider.py
src/repositories/: user_repository.py
src/routers/: auth_router.py
src/services/: auth_service.py
(+3 files in other folders)
