[project]
name = "fastapicleantemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
